--- a/about-me.html
+++ b/about-me.html
@@ -6,9 +6,9 @@
   <title>About Me</title>
 </head>
 
-<a href="Lesson8(HTML Tables Solution Walkthrough).html">Home</a>
+<a href="index.html">Home</a>
 <a href="hobbies.html"> My Hobbies </a>
-<a href="Lesson10(Forms in Practice)contact-me.html"> Contact Me </a>
+<a href="contact-me.html"> Contact Me </a>
 <a href="about-me.html"> About Me </a>
 <hr>
 
