Update and rename Lesson8(HTML Tables Solution Walkthrough).html to index.html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 <body>
 
-  <a href="Lesson8(HTML Tables Solution Walkthrough).html">Home</a>
+  <a href="index.html">Home</a>
   <a href="hobbies.html"> My Hobbies </a>
-  <a href="Lesson10(Forms in Practice)contact-me.html"> Contact Me </a>
+  <a href="contact-me.html"> Contact Me </a>
   <a href="about-me.html"> About Me </a>
   <hr>
 
