--- a/hobbies.html
+++ b/hobbies.html
@@ -17,7 +17,7 @@
   <h1>My Hobbies</h1>
   <ol>
     <li><a href="https://www.google.com/search?q=2012+ninja+650+RED&sxsrf=ALiCzsbP0wcPKb12Ajd-CYQncHyCNdgEyg:1655934669214&source=lnms&tbm=isch&sa=X&ved=2ahUKEwih6uqthcL4AhW2D0QIHd3ABjgQ_AUoAnoECAEQBA&biw=1600&bih=767&dpr=1">Riding Motorcycle</a></li>
-    <li><a href=BabyShadow.jpg>Playing with my Pets</a></li>
+    <li><a href=BabyShadow.JPG>Playing with my Pets</a></li>
     <li><a href="https://pcpartpicker.com/user/Mon5terT3k/">Building Gaming Computers</a></li>
   </ol>
 </body>
